--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1075,5 +1075,5 @@ section {
 }
 
 #sos-button:hover {
-  background-color: #ff3333; /* Lighter Red on Hover */
+  background-color: #ff3333; Lighter Red on Hover
 }
