--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,7 +496,8 @@ body {
   #ABOUT
 \*-----------------------------------*/
 
-.about-content { margin-bottom: 50px; }
+.about-content { margin-bottom: 50px;
+background-image: url('/assets/images/Untitled\ design.png'); }
 
 .about .section-subtitle { margin-bottom: 10px; }
 
@@ -1039,3 +1040,7 @@ body {
     margin-left: 233px;
     /* margin-top: 110px; */
 }
+/* .w-100{
+  height: 1000px;
+  width: 500px;
+} */
