--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1039,6 +1039,7 @@ body {
 /* Add this CSS to your styles.css file */
 
 /* Header */
+
 header {
   text-align: center;
   padding: 20px;
@@ -1053,7 +1054,7 @@ header {
 
 /* Sections */
 section {
-  text-align: center;
+  /* text-align: center; */
   margin: 20px;
   padding: 20px;
 }
