--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1036,10 +1036,20 @@ body {
   width: 120px; /* Adjust the width to your desired size */
     height: 120px; 
     position: relative;
-    margin-left: 233px;
+    /* margin-left: 233px; */
     /* margin-top: 110px; */
 }
 /* .w-100{
   height: 1000px;
   width: 500px;
 } */
+
+.card-content2 {
+  display: flex; /* Use Flexbox to align items horizontally */
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.card-price{
+  padding:50px;
+}
